--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
   <h1>Hi! Im Danny</h1>
   <p>Welcome to my portfolio!</p>
-  <img src="https://twitter.com/WeDevlp/photo" />
+ <p>I'm a Front End Engineer | Production Manager | Tech(ie) | Family Man</p>
+  <img src=url("https://twitter.com/WeDevlp/photo") />
 </body>
  
 </html>
